feat: improve mini onboarding and user experience
